# Python_Libs

./: 01_ruff.html  02_ruff_rule_categories.html  0_pandas.html  0_pytest.html  1_monkey_patch.html  1_polars.html  README.md  ast.html  beautifulsoup4.html  black.html  custom_filename.html  dask.html  dataclasses.html  datetime.html  duckduckgo-search.html  export.html  index.html  ipywidget.html  kaggle.html  marimo.html  matplotlib.html  nbdev.html  numexpr.html  numpy.html  pandas.html  pivottablejs.html  prefect.yaml  pyproject.toml  request&httpx.html  rich.html  robots.txt  ruff.html  scipy.html  search.json  settings.ini  sitemap.xml  sqlalchemy.html  tqdm.html  untitled.html
Display/: altair.html  bokeh.html  echarts.html  graphviz.html  manim.html  mermaid.html
Environments/: conda.html  direnv.html  pipenv.html  poetry.html  uv.html  variables.html  venv.html
MLtools/: _modidx.py
Other/: latexify.html  mito.html  pivottablesjs.html  pytube.html
Python/: python_args.html  python_class.html  python_logging.html  python_multiprocessing.html
Useful_Tools/: bash.html  tmux.html
_proc/: 00_Matplotlib.ipynb  00_pandas.ipynb  01_Numpy.ipynb  02_Scipy.ipynb  03_0_Pandas.ipynb  03_1_Polars.ipynb  03_Pandas.ipynb  04_Tqdm.ipynb  04_pivottablesjs.ipynb  05_ipywidget.ipynb  06_Kaggle.ipynb  06_Mito.ipynb  07_Altair.ipynb  07_Dask.ipynb  08_Black.ipynb  08_Tqdm.ipynb  09_01_Ruff.ipynb  09_02_Ruff_Rule_Categories.ipynb  09_Ruff.ipynb  09_ipywidget.ipynb  10_Nbdev.ipynb  11_Numexpr.ipynb  11_Python Class.ipynb  12_Datetime.ipynb  13_Request&Httpx.ipynb  export.html  (+8 more)
(+230 files in other folders)
